# packages/api-client/openapi.json
@@ -5381,6 +5381,63 @@
             }
           }
         }
+      },
+      "post": {
+        "tags": [
+          "cadastros"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "nome": {
+                    "type": "string",
+                    "minLength": 2
+                  },
+                  "tipo": {
+                    "type": "string",
+                    "enum": [
+                      "Crédito",
+                      "Veicular",
+                      "Localização",
+                      "Judicial"
+                    ]
+                  },
+                  "contratoFornecedorId": {
+                    "type": "string",
+                    "minLength": 3
+                  },
+                  "custoConsulta": {
+                    "default": 0,
+                    "type": "number",
+                    "minimum": 0
+                  }
+                },
+                "required": [
+                  "nome",
+                  "tipo",
+                  "contratoFornecedorId"
+                ],
+                "additionalProperties": false
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Default Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Criado"
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/api/repasses": {
@@ -6547,10 +6604,15 @@
                         "type": "object",
                         "properties": {
                           "placa": {
-                            "type": "string"
+                            "type": "string",
+                            "minLength": 1
                           },
                           "chassi": {
                             "type": "string"
+                          },
+                          "renavam": {
+                            "type": "string",
+                            "pattern": "^d{11}$"
                           },
                           "modelo": {
                             "type": "string",
@@ -6621,10 +6683,15 @@
                         "type": "object",
                         "properties": {
                           "placa": {
-                            "type": "string"
+                            "type": "string",
+                            "minLength": 1
                           },
                           "chassi": {
                             "type": "string"
+                          },
+                          "renavam": {
+                            "type": "string",
+                            "pattern": "^d{11}$"
                           },
                           "modelo": {
                             "type": "string",
